syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

package sensorpb.v1;

option go_package = "github.com/samoilenko/cossack_labs/pkg/sensorpb/v1;sensorpbv1";

enum Codes {
  CODE_UNSPECIFIED = 0;
  CODE_OK = 1;
  CODE_INVALID_ARGUMENT = 2;
  CODE_RESOURCE_EXHAUSTED = 3;
  CODE_INTERNAL = 4;
}

message SensorData {
  string sensor_name = 1;
  int32 sensor_value = 2;
  google.protobuf.Timestamp timestamp = 3;
  int64 correlationId = 4;
}

message Response {
  Codes code = 1;
  string message = 2;
  google.protobuf.Duration retry_after = 3;
  int64 correlationId = 4;
}

service SensorService {
  rpc GetStream(stream SensorData) returns (stream Response);
}